[gd_scene load_steps=3 format=3 uid="uid://c4j5n8m1x3k9p"]

[ext_resource type="FontFile" uid="uid://ce7y17n27iqt6" path="res://assets/fonts/Kenney Future.ttf" id="1_font"]
[ext_resource type="Script" path="res://scripts/ui/game_over.gd" id="2_script"]

[node name="GameOver" type="Control"]
script = ExtResource("2_script")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "Click to Return to Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
text = "" 